--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="fill_parent">
 
-    <ImageView
-        android:id="@+id/owncloud_logo"
-        android:src="@drawable/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true" />
-
-    <EditText
-        android:id="@+id/owncloud_url"
+    <ListView
+        android:id="@+id/lvGroup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="owncloud URL"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/owncloud_logo"
-        android:text="http://www.tanorn.info/owncloud" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+    </ListView>
 
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Username"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/owncloud_url" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:layout_below="@id/username" />
-
-    <Button
-        android:id="@+id/login"
-        android:text="Login"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/password" />
-
-</RelativeLayout>
+</LinearLayout>
