--- a/app/src/main/res/layout/list_groups.xml
+++ b/app/src/main/res/layout/list_groups.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="200px">
+    android:layout_height="200px"
+    android:background="#EEEEEE">
 
     <ImageView
         android:id="@+id/groupimg"
@@ -16,6 +17,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         android:textSize="50px"
+        android:textColor="#000000"
     />
 
 </LinearLayout>
