--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_todoRemainder"
+        android:icon="@drawable/ic_notifications_none_white_24dp"
+        android:title="todo remainder"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_groupAdder"
+        android:icon="@drawable/ic_group_add_white_24dp"
+        android:title="group adder"
+        app:showAsAction="always" />
+
 </menu>
